--- a/pages/Release/Publish/Publish.wxss
+++ b/pages/Release/Publish/Publish.wxss
@@ -1,5 +1,5 @@
 /* pages/Release/Publish/Publish.wxss */
-
+@import "../../../template/template.wxss";
 .textartcle {
   width: 100%;
   height: 378rpx;
@@ -62,13 +62,15 @@
   align-items: center;
   box-sizing: border-box;
   padding: 0rpx 24rpx;
+  margin: 0 auto;
+  margin-top: 0.5rem;
 }
 
 .adder {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   margin-left: -343rpx;
-  bottom: 204rpx;
+  bottom: 204rpx; */
 }
 .adder .iconfont{
   font-size: 30rpx;
@@ -82,8 +84,9 @@
 }
 
 .allow {
-  position: absolute;
+  /* position: absolute;
   left: 50%;
   margin-left: -343rpx;
-  bottom: 119rpx;
+  bottom: 119rpx; */
+  margin-top: 0.5rem;
 }
