--- a/pages/Release/experience_res/experience_res.wxss
+++ b/pages/Release/experience_res/experience_res.wxss
@@ -101,9 +101,10 @@
 
 .content {
   margin-top: 53rpx;
-  padding-bottom:10rpx; 
+  padding-bottom: 10rpx;
 }
-.textContent{
+
+.textContent {
   font-size: 30rpx;
   color: RGBA(51, 51, 51, 1);
 }
@@ -116,7 +117,7 @@
   position: fixed;
   bottom: 0;
   display: flex;
-  z-index: 20
+  z-index: 20;
 }
 
 .foot_item {
@@ -345,7 +346,8 @@
 }
 
 .icon-sousuo {
-  font-size: 44rpx;color:RGBA(153, 153, 153, 1);
+  font-size: 44rpx;
+  color: RGBA(153, 153, 153, 1);
 }
 
 .seach_ipt {
@@ -359,11 +361,99 @@
   font-size: 32rpx;
   font-family: PingFang-SC-Medium;
   line-height: 88rpx;
-  color:RGBA(153, 153, 153, 1);
+  color: RGBA(153, 153, 153, 1);
 }
 
-
-.thumb{
+.thumb {
   width: 100%;
   height: auto;
+}
+
+.send_group {
+  width: 100%;
+  height: 100rpx;
+  background-color: rgba(255, 255, 255, 1);
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 0rpx 32rpx;
+  justify-content: space-between;
+  z-index: 9999
+}
+
+.send_ipt {
+  width: 458rpx;
+  height: 60rpx;
+  border-bottom: 1rpx solid RGBA(66, 87, 122, 1);
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: RGBA(153, 153, 153, 1);
+}
+
+.send_sc, .send_share {
+  width: 72rpx;
+  height: 72rpx;
+  border-radius: 50%;
+  background-color: RGBA(132, 148, 173, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-xihuan {
+  font-size: 40rpx;
+  color: rgba(255, 255, 255, 1);
+}
+
+.icon-fenxiang {
+  font-size: 40rpx;
+  color: rgba(255, 255, 255, 1);
+}
+
+.send_groupone {
+  width: 100%;
+  height: 100rpx;
+  background-color: rgba(255, 255, 255, 1);
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 20rpx 32rpx;
+  justify-content: space-between;
+  z-index: 999
+}
+
+.iptGroup {
+  width: 100%;
+  height: 100%;
+  border-bottom: 1rpx solid rgba(51, 51, 51, 1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ipt_Group {
+  width: 580rpx;
+  height: 100%;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(51, 51, 51, 1);
+}
+
+.Send {
+  display: flex;
+  align-items: center;
+  line-height: 60rpx;
+  font-size: 28rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(66, 87, 122, 1);
+}
+
+.icon-fabu {
+  font-size: 30rpx;
+  margin-right: 10rpx;
+  color: rgba(51, 51, 51, 1);
 }
