--- a/pages/Release/experience_res/experience_res.wxss
+++ b/pages/Release/experience_res/experience_res.wxss
@@ -133,7 +133,7 @@
 }
 
 .foot_item .iconfont {
-  font-size: 30rpx;
+  font-size: 40rpx;
   display: block;
 }
 
@@ -141,6 +141,11 @@
   color: RGBA(152, 97, 225, 1);
 }
 
+.foot_item .icon-xihuan1 {
+  font-size: 40rpx;
+  margin-right: 5rpx;
+  color: RGBA(152, 97, 225, 1);
+}
 .icon-xihuan1 {
   font-size: 30rpx;
   margin-right: 5rpx;
@@ -153,6 +158,7 @@
   position: fixed;
   top: 0;
   background-color: rgba(51, 51, 51, 0.8);
+  z-index: 30
 }
 
 .giftTab {
@@ -401,15 +407,18 @@
   align-items: center;
   justify-content: center;
 }
-
+.zan .icon-xihuan {
+  font-size: 30rpx;
+  /* color: rgba(255, 255, 255, 1); */
+}
 .icon-xihuan {
   font-size: 40rpx;
-  color: rgba(255, 255, 255, 1);
+  /* color: rgba(255, 255, 255, 1); */
 }
 
 .icon-fenxiang {
   font-size: 40rpx;
-  color: rgba(255, 255, 255, 1);
+  /* color: rgba(255, 255, 255, 1); */
 }
 
 .send_groupone {
