--- a/pages/personl/Recharge/Recharge.wxml
+++ b/pages/personl/Recharge/Recharge.wxml
@@ -1,8 +1,8 @@
 <view class='tap_click'>
   <view class="tap_item {{myindex==index?'item_active':''}}" wx:for="{{tapArr}}" bindtap='click' data-id='{{index}}' wx:key="key">
-    {{item}}
+    {{item.name}}
   </view>
 </view>
 
-<view class='Recharge'>充值</view>
+<view class='Recharge' bindtap='sureRC'>充值</view>
 
