--- a/template/template.wxss
+++ b/template/template.wxss
@@ -1034,7 +1034,7 @@
   font-size: 28rpx;
   font-family: PingFang-SC-Medium;
   color: rgba(51, 51, 51, 1);
-  height: 118rpx;
+  /* height: 118rpx; */
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -1057,7 +1057,7 @@
 .personlImg {
   width: 320rpx;
   height: 320rpx;
-  background-color: red;
+  /* background-color: red; */
   display: block
 }
 
@@ -1073,7 +1073,7 @@
 .doubleAndpersonl {
   width: 180rpx;
   height: 180rpx;
-  background-color: blue;
+  /* background-color: blue; */
   margin-right: 11rpx;
   margin-bottom: 15rpx;
   float: left;
@@ -1083,7 +1083,7 @@
 .four {
   width: 220rpx;
   height: 220rpx;
-  background-color: green;
+  /* background-color: green; */
   float: left;
   margin-right: 16rpx;
   margin-bottom: 16rpx;
@@ -1093,6 +1093,7 @@
 .userAdder {
   height: 55rpx;
   display: inline-block;
+  margin-top: 20rpx;
   box-sizing: border-box;
   padding: 0rpx 24rpx 0rpx 8rpx;
   background-color: RGBA(242, 240, 245, 1);
